ex024 media query portrait and landscape

--- a/exercicios/ex024/mq001/estilos/tela.css
+++ b/exercicios/ex024/mq001/estilos/tela.css
@@ -52,7 +52,9 @@ a {
     display: block;
     position: relative;
     background-color: rgb(255, 255, 255);
-    width: 1000px;
+    width: 100px;
+    top: 5px;
+    right: 0px;
     
 }
 
