--- a/exercicios/ex024/mq004/estilos/media-query.css
+++ b/exercicios/ex024/mq004/estilos/media-query.css
@@ -1,7 +1,26 @@
 @charset "UTF-8";
 
 @media print {
+    body {
+        font-family: 'Courier New', Courier, monospace;
+        border: 2px  solid black;
+        border-radius: 10px;
+    }
+        main > h1 {
+            text-shadow: none;
+            color: #000;
+        }
 
+        main::after {
+            content: 'Essa impressão foi feita atravez do site curso em video';
+            text-decoration: overline;
+        }
+
+        #cel {display: none;}
+        #tab {display: none;}
+        #imp {display: block;}
+        #desk {display: none;}
+        #tev {display: none;}
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
